<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/icon"
        android:layout_weight="1"
        android:layout_margin="100dp"/>

    <Button
        android:id="@+id/qr_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstButton"
        android:layout_margin="8dp"/>


    <Button

        android:id="@+id/qr_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondButton"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>


    <Button
        android:id="@+id/qr_search"
        android:text="@string/thirdButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>



</LinearLayout>